applications/lanOrganiser/service.yml
# yaml-language-server: $schema=kubernetes
apiVersion: v1
kind: Service
metadata:
  name: lan-organiser
  namespace: default
  labels:
    app: lan-organiser
spec:
  type: ClusterIP
  selector:
    app: lan-organiser
  ports:
  - name: http
    port: 8081
    targetPort: 291
    protocol: TCP
  sessionAffinity: None
