applications/lanOrganiser/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lan-organiser
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`lan-organiser.local`)
    kind: Rule
    services:
    - name: lan-organiser
      port: 8081
